--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,48 @@
 version: '3.9'
 
+x-base_service: &base_service
+  deploy:
+    resources:
+      reservations:
+        devices:
+          - driver: nvidia
+            count: all
+            capabilities: [gpu]
+  restart: unless-stopped
+
 services:
   stable-diffusion-webui:
+    <<: *base_service
     image: bean980310/stable-diffusion-webui:latest
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
     volumes:
-      - ~/stable-diffusion-docker-project/stable-diffusion-docker/a1111-sdwebui:/workspace/stable-diffusion-webui
+      - &models ./stable-diffusion-docker-base/sd-models:/stable-diffusion-webui/models
+      - &embeddings ./stable-diffusion-docker-base/embeddings:/stable-diffusion-webui/embeddings
+      - ./workspace/stable-diffusion-webui/extensions:/stable-diffusion-webui/extensions
+      - ./workspace/stable-diffusion-webui/webui-user.sh:/stable-diffusion-webui/webui-user.sh
+      - ./workspace/stable-diffusion-webui/config.json:/stable-diffusion-webui/config.json
+      - ./outputs/stable-diffusion-webui:/stable-diffusion-webui/outputs
     ports:
       - "3010:7860"
-    environment:
-      - CLI_ARGS=--port 7860 --listen --api --xformers --enable-insecure-extension-access --no-half-vae
-    restart: unless-stopped
+    build:
+      context: ./build/a1111-sdwebui
+      args:
+        WEBUI_VERSION: 1.9.4
+  kohya_ss:
+    <<: *base_service
+    image: bean980310/kohya-ss:latest
+    volumes:
+      - *models
+      - *embeddings
+      - ./workspace/comfyui/
+    ports:
+      - "3020:7860"
+  comfyui:
+    <<: *base_service
+    image: bean980310/comfyui:latest
+    volumes:
+      - *models
+      - *embeddings
+      - ./workspace/ComfyUI/custom_nodes:/ComfyUI/custom_nodes
+      - ./outputs/ComfyUI:/ComfyUI/output
+    ports:
+      - "3030:8188"
