--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       context: ./build/a1111-sdwebui
       args:
         WEBUI_VERSION: 1.9.4
+        BASE_IMAGE: bean980310/ubuntu-docker:1.0.0-cuda-12.1.1-torch2.3.1
   kohya_ss:
     <<: *base_service
     image: bean980310/kohya-ss:latest
