--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,14 +37,17 @@ services:
       - kohya_ss
     image: bean980310/kohya-ss:latest
     volumes:
-      - *models
-      - *embeddings
-      - ./workspace/comfyui/
+      - ./stable-diffusion-docker-base/sd-models:/app/kohya_ss/models
+      - ./stable-diffusion-docker-base/embeddings:/app/kohya_ss/models/embeddings
     ports:
       - "3020:7860"
     build:
       context: ./build/kohya_ss
       dockerfile: Dockerfile
+      args:
+        WEBUI_VERSION: *WEBUI_VERSION
+        BASE_IMAGE: *BASE_IMAGE
+        KOHYA_VERSION: v24.1.4
   comfyui:
     <<: *base_service
     profiles:
