--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     volumes:
       - ./stable-diffusion-docker-base/sd-models:/app/kohya_ss/models
       - ./stable-diffusion-docker-base/embeddings:/app/kohya_ss/models/embeddings
+      - ./workspace/kohya_ss/accelerate.yaml:/app/accelerate.yaml
     ports:
       - "3020:7860"
     build:
