--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,4 +113,6 @@ services:
       context: ./build/fooocus
       dockerfile: Dockerfile
       args:
+        WEBUI_VERSION: *WEBUI_VERSION
+        BASE_IMAGE: *BASE_IMAGE
         FOOOCUS_VERSION: v2.4.3
