--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,9 +149,17 @@ services:
         WEBUI_VERSION: *WEBUI_VERSION
         BASE_IMAGE: *BASE_IMAGE
         SDNEXT_COMMIT: 2ec6e9eec481223b8abe50cb5165d5fd9be2d086
+  ollama:
+    <<: *base_service
+    volumes:
+      - ollama:/root/.ollama
+    container_name: ollama
+    pull_policy: always
+    tty: true
+    image: ollama/ollama:latest
   open-webui:
     <<: *base_service
-    image: bean980310/open-webui:ollama
+    image: ghcr.io/open-webui/open-webui:ollama
     container_name: open-webui
     volumes:
       - open-webui:/app/backend/data
