--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,7 +159,7 @@ services:
     image: ollama/ollama:latest
   open-webui:
     <<: *base_service
-    image: ghcr.io/open-webui/open-webui:ollama
+    image: bean980310/open-webui:ollama
     container_name: open-webui
     volumes:
       - open-webui:/app/backend/data
