--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -120,10 +120,10 @@ services:
     ports:
       - "3050:7860"
     pull_policy: missing
-  sd.next:
+  sdnext:
     <<: *base_service
-    image: bean980310/sd-next:latest
-    container_name: sd.next
+    image: bean980310/sdnext:latest
+    container_name: sdnext
     volumes:
       - ./stable-diffusion-models/sd-models:/app/automatic/models
       - ./stable-diffusion-models/embeddings:/app/automatic/models/embeddings
