--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       dockerfile: Dockerfile
       args:
         WEBUI_VERSION: *WEBUI_VERSION
-        BASE_IMAGE: bean980310/ubuntu-docker:1.0.2-cuda11.8.0-torch2.1.2
+        BASE_IMAGE: *BASE_IMAGE
         KOHYA_VERSION: v24.1.4
   comfyui:
     <<: *base_service
