--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -115,6 +115,7 @@ services:
     volumes:
       - ./stable-diffusion-models/sd-models:/app/stable-diffusion-webui-forge/models
       - ./stable-diffusion-models/embeddings:/app/stable-diffusion-webui-forge/embeddings
+      - ./workspace/stable-diffusion-webui-forge/extensions:/app/stable-diffusion-webui-forge/extensions
       - ./workspace/stable-diffusion-webui-forge/webui-user.sh:/app/stable-diffusion-webui-forge/webui-user.sh
       - ./workspace/stable-diffusion-webui-forge/config.json:/app/stable-diffusion-webui-forge/config.json
       - ./workspace/stable-diffusion-webui-forge/ui-config.json:/app/stable-diffusion-webui-forge/ui-config.json
@@ -129,6 +130,7 @@ services:
     volumes:
       - ./stable-diffusion-models/sd-models:/app/automatic/models
       - ./stable-diffusion-models/embeddings:/app/automatic/models/embeddings
+      - ./workspace/SD.Next/extensions:/app/automatic/extensions
       - ./workspace/SD.next/config.json:/app/automatic/config.json
       - ./workspace/SD.next/ui-config.json:/app/automatic/ui-config.json
     ports:
