--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,6 +162,7 @@ services:
       - ./stable-diffusion-models/sd-models:/app/easy-diffusion/models
       - ./stable-diffusion-models/embeddings:/app/easy-diffusion/models/embeddings
       - ./workspace/easy-diffusion/config.json:/app/easy-diffusion/scripts/config.json
+      - ./outputs/easy-diffusion:/app/easy-diffusion/outputs
     ports:
       - "9000:9000"
     build:
