--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -143,6 +143,8 @@ services:
     volumes:
       - ./stable-diffusion-models/sd-models:/app/easy-diffusion/models
       - ./stable-diffusion-models/embeddings:/app/easy-diffusion/models/embeddings
+      - ./workspace/easy-diffusion/config.yaml:/app/easy-diffusion/config.yaml
+      - ./outputs/easy-diffusion:/app/easy-diffusion/outputs
     ports:
       - "9000:9000"
     pull_policy: missing
