--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -10,5 +10,7 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-            - name: commit
-              run: git commit -p
+            - name: Add & Commit
+              uses: EndBug/add-and-commit@v9.1.4
+          
+            
