--- a/stable-diffusion-models/Dockerfile
+++ b/stable-diffusion-models/Dockerfile
@@ -3,7 +3,7 @@ FROM ${BASE_IMAGE} AS base
 
 WORKDIR /data
 
-RUN pip3 install -U huggingface_hub[cli]
+RUN pip3 install -U huggingface huggingface_hub[cli]
 
 COPY --chmod=755 . .
 
