--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,7 +195,7 @@ services:
         COMFYUI_VERSION: *COMFYUI_VERSION
   facefusion:
     <<: *base_service
-    image: bean980310/facefusion
+    image: bean980310/facefusion:latest
     container_name: facefusion
     volumes:
       - ./workspace/facefusion/.assets:/app/facefusion/.assets
