--- a/docker-compose.download.yml
+++ b/docker-compose.download.yml
@@ -9,4 +9,4 @@ services:
       context: ./stable-diffusion-models
       dockerfile: Dockerfile
       args:
-        BASE_IMAGE: *BASE_IMAGE
+        BASE_IMAGE: bean980310/ubuntu-docker:1.0.2-cuda12.1.1-torch2.3.1
